# HomeComfort

./: .env  .env.example  Dockerfile  HomeComfort.postman_collection.json  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/apps/auth/: urls.py  views.py
backend/apps/categories/: models.py  serializers.py  urls.py  views.py
backend/apps/contacts/: models.py  serializers.py  urls.py  views.py
backend/apps/goods/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/orders/: models.py  serializers.py  urls.py  views.py
backend/apps/product_care/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: jwt_conf.py
backend/core/: pagination.py
backend/core/dataclasses/: user_dataclass.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/permissions/: is_admin_or_write_only_permission.py
backend/core/services/: email_service.py  file_service.py  jwt_service.py
backend/templates/: base.html
client/: asset-manifest.json  index.html
client/static/css/: main.28e91991.css  main.28e91991.css.map
client/static/js/: main.1b0530e9.js  main.1b0530e9.js.map  main.3bb157a9.js  main.3bb157a9.js.map  main.54d0cfd4.js  main.54d0cfd4.js.map
frontend/: package-lock.json  package.json
frontend/src/: index.css  index.js  router.js
frontend/src/constants/: urls.js
frontend/src/hoc/: ContextProvider.js
(+87 files in other folders)
